--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "typescript",
     "advent-of-code"
   ],
-  "author": "2wndrhs@gmail.com",
+  "author": "jmainhard",
   "license": "MIT",
   "devDependencies": {
     "@eslint/js": "^9.16.0",
